# FinanceAnalytics

./: .gitignore  CMakeLists.txt  README.md  copyDep.cmd  deployRelease.cmd  main.cpp
assets/: recource.qrc
deployApplication/: copyDep.cmd  deployRelease.cmd
docs/: Release Notes May 2023 Update.md
releases/: # Fall Guys Turnier August 2023.md  deployRelease.cmd
src/AutoCompleter/: autocompleter.cpp  autocompleter.h
src/Time/: time.cpp  time.h
src/repository/: .gitignore  repository.cpp  repository.h
src/repository/datahandler/: datahandler.cpp  datahandler.h
src/repository/reader/: reader.cpp  reader.h
src/repository/refactorer/: refactorer.cpp  refactorer.h
src/repository/writer/: writer.cpp  writer.h
src/sorter/: sorter.cpp  sorter.h
src/validator/: validator.cpp  validator.h
src/windowManager/: windowmanager.cpp  windowmanager.h
ui/EntryWindow/EntryController/: entrycontroller.cpp  entrycontroller.h
ui/EntryWindow/EntryDatahandler/: entrydata.cpp  entrydata.h  entrydatahandler.cpp  entrydatahandler.h
ui/EntryWindow/EntryForm/: entryform.cpp  entryform.h  entryform.ui
ui/EntryWindow/EntryWindow/: addentrywindow.cpp  addentrywindow.h  addentrywindow.ui
ui/EntryWindow/ErrorMessageBox/: errormessagebox.cpp  errormessagebox.h  errormessagebox.ui
ui/EntryWindow/MessageBox/ErrorMessageBox/: errormessagebox.cpp  errormessagebox.h  errormessagebox.ui
ui/EntryWindow/MessageBox/WhitelistMessageBox/: whitelistmessagebox.cpp  whitelistmessagebox.h  whitelistmessagebox.ui
ui/StatisticsWindow/Forms/BarChart/: barchart.cpp  barchart.h
ui/StatisticsWindow/Forms/DonutChart/: donutchart.cpp  donutchart.h
ui/StatisticsWindow/Forms/DonutChart/Slice/: slice.cpp  slice.h
ui/StatisticsWindow/Forms/MonthCard/: monthcard.cpp  monthcard.h  monthcard.ui
ui/StatisticsWindow/Forms/PieChart/: piechart.cpp  piechart.h
ui/StatisticsWindow/Forms/PieChart/Slice/: pieslice.cpp  pieslice.h
ui/StatisticsWindow/Forms/SpendingForm/: spendingform.cpp  spendingform.h  spendingform.ui
ui/StatisticsWindow/MainWindow/: statisticswindow.cpp  statisticswindow.h  statisticswindow.ui
ui/addEntry/addEntryForm/: entryform.cpp  entryform.h  entryform.ui
ui/addEntry/addEntryWindow/: addentrywindow.cpp  addentrywindow.h  addentrywindow.ui
ui/addEntry/entryDatahandler/: entrydata.cpp  entrydatahandler.cpp  entrydatahandler.h
ui/mainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
